code25_all/scala/11303337.txt
Int
scala> val a = 3
a: Int = 3

scala> val b = 5
b: Int = 5

a/b
scala> a/b
res0: Int = 0

(float)
scala> ((Float)a)/b
<console>:9: error: value a is not a member of object Float
              ((Float)a)/b
                      ^

